--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -31,8 +31,8 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
-;offset-x = 1%
-;offset-y = 1%
+offset-x = 0 ;1%
+offset-y = 0 ;1%
 radius = 6.0
 fixed-center = false
 
