--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -31,29 +31,29 @@ alert = #bd2c40
 ;monitor = ${env:MONITOR:HDMI-1}
 width = 100%
 height = 27
-offset-x = 0 ;1%
-offset-y = 0 ;1%
-radius = 6.0
+offset-x = 0%
+offset-y = 0%
+radius = 0.0
 fixed-center = false
 
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 3
+line-size = 4
 line-color = #f00
 
-border-size = 4
-border-color = #00000000
+border-size = 0
+border-color = #d6dbe5
 
-padding-left = 0
-padding-right = 2
+padding-left = 4
+padding-right = 4
 
 module-margin-left = 1
 module-margin-right = 2
 
-font-0 = fixed:pixelsize=10;1
-font-1 = unifont:fontformat=truetype:size=8:antialias=false;0
-font-2 = siji:pixelsize=10;1
+font-0 = fixed:pixelsize=12;1
+font-1 = unifont:fontformat=truetype:size=10:antialias=true;0
+font-2 = siji:pixelsize=12;1
 
 modules-left = bspwm i3
 modules-center = mpd
@@ -417,7 +417,7 @@ screenchange-reload = true
 ;pseudo-transparency = false
 
 [global/wm]
-margin-top = 5
-margin-bottom = 5
+margin-top = 4
+margin-bottom = 4
 
 ; vim:ft=dosini
