--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Arc-Dark
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=DejaVu Sans Semi-Condensed 12
+gtk-font-name=SF Pro Text 12
 gtk-cursor-theme-name=Breeze_Snow
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
