--- a/picom/.config/picom/picom.conf
+++ b/picom/.config/picom/picom.conf
@@ -3,7 +3,7 @@
 #################################
 # requires https://github.com/jonaburg/picom
 # (These are also the default values)
-transition-length = 100
+transition-length = 300
 transition-pow-x = 0.1
 transition-pow-y = 0.1
 transition-pow-w = 0.1
@@ -210,11 +210,12 @@ blur-kern = "3x3box";
 # Exclude conditions for background blur.
 # blur-background-exclude = []
 
-#blur-background-exclude = [
+blur-background-exclude = [
+  "class_g = 'slop'",
 #  "window_type = 'dock'",
-#  "window_type = 'desktop'",
-#  "_GTK_FRAME_EXTENTS@:c"
-#];
+  "window_type = 'desktop'",
+  "_GTK_FRAME_EXTENTS@:c"
+];
 
 #################################
 #       General Settings        #
