--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -13,8 +13,8 @@
 
 [colors]
 background = ${xrdb:background}
-background-wm = ${xrdb:color8}
-background-alt = ${xrdb:color0}
+background-wm = ${xrdb:background}
+background-alt = ${xrdb:background}
 foreground = ${xrdb:foreground}
 foreground-alt = ${xrdb:color7}
 primary = ${xrdb:color4}
@@ -60,6 +60,9 @@ foreground = ${colors.foreground}
 
 module-margin-left = 2
 module-margin-right = 2
+
+dpi-x = ${xrdb:Xft.dpi:96}
+dpi-y = ${xrdb:Xft.dpi:96}
 
 font-0 = SourceCodePro:pixelsize=13;
 font-1 = HackNerdFont:pixelsize=10;
