--- a/gtk-3.0/.config/gtk-3.0/settings.ini
+++ b/gtk-3.0/.config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=Matcha-dark-azul
 gtk-icon-theme-name=Papirus-Dark
-gtk-font-name=Microsoft Sans Serif 12
+gtk-font-name=Noto Sans 11
 gtk-cursor-theme-name=Breeze_Snow
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
@@ -11,6 +11,6 @@ gtk-menu-images=1
 gtk-enable-event-sounds=1
 gtk-enable-input-feedback-sounds=1
 gtk-xft-antialias=1
-gtk-xft-hinting=0
-gtk-xft-hintstyle=hintfull
+gtk-xft-hinting=1
+gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=none
